# libloadorder

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Doxyfile  README  README.md  appveyor.yml  libloadorder.sln  mingw32-toolchain.cmake
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: load_order.rs
doc/: book.toml
doc/src/: SUMMARY.md  active_plugins.md  conflict_resolution.md  false_flagged_plugins.md  introduction.md  load_order_mechanisms.md  plugin_types.md  textfile_standard.md
docs/: Doxyfile  conf.py  credits.rst  index.dox  index.rst  introduction.rst  libloadorder-readme.html  load_order_introduction.rst  miscellaneous.rst  reference.rst  textfile-standard.html  textfile_standard.rst  tlos.dox
docs/licenses/: texts.rst
ffi/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
ffi/src/: active_plugins.rs  constants.rs  handle.rs  helpers.rs  lib.rs  load_order.rs
ffi/tests/: ffi.c  ffi.cpp
include/libloadorder/: activeplugins.h  constants.h  libloadorder.h  loadorder.h
libloadorder/: activeplugins.cpp  exception.cpp  exception.h  game.cpp  helpers.cpp  helpers.h  libespm-interface.cpp  libloadorder.cpp  libloadorder.h  libloadorder.vcxproj  libloadorder.vcxproj.filters  plugins.cpp  plugins.h
libloadorder-tester/: libloadorder-tester.cpp  libloadorder-tester.vcxproj  libloadorder-tester.vcxproj.filters  tester-interface.cpp  tester-interface.h
scripts/travis/: install_boost.sh
src/: activeplugins.cpp  enums.rs  error.h  error.rs  exception.cpp  exception.h  game.cpp  game.h  game_settings.rs  ghostable_path.rs  helpers.cpp  helpers.h  ini.rs  lib.rs  libespm-interface.cpp  libespm-interface.h  libloadorder.cpp  libloadorder.h  loadorder.cpp  openmw_config.rs  plugin.rs  plugins.cpp  plugins.h  streams.h  tester-interface.cpp  tester-interface.h  tester.cpp  tests.rs
src/api/: _lo_game_handle_int.cpp  _lo_game_handle_int.h  activeplugins.cpp  activeplugins.h  c_helpers.cpp  c_helpers.h  constants.cpp  constants.h  libloadorder.cpp  libloadorder.h  loadorder.cpp  loadorder.h
src/backend/: GameSettings.cpp  GameSettings.h  LoadOrder.cpp  LoadOrder.h  PathCache.cpp  PathCache.h  Plugin.cpp  Plugin.h  error.cpp  error.h  game.cpp  game.h  helpers.cpp  helpers.h  plugins.cpp  plugins.h  streams.h
src/load_order/: asterisk_based.rs  error.rs  insertable.rs  mod.rs  mutable.rs  openmw.rs  readable.rs  tests.rs  textfile_based.rs  timestamp_based.rs  writable.rs
src/tests/: GameTest.h  api.cpp  fixtures.h  main.cpp
src/tests/api/: CApiGameOperationTest.h  CHelpersTest.h  _lo_game_handle_intTest.h  activeplugins.h  libloadorder.h  lo_create_handle_test.h  loadorder.h
src/tests/backend/: ErrorTest.h  GameHandleTest.h  GameSettingsTest.h  HelpersTest.h  LoadOrderTest.h  PluginTest.h
src/tests/plugins/: Cava Obscura - Cyrodiil.esp  Cava Obscura - Filter Patch For Mods.esp  Cava Obscura - SI.esp  EnhancedWeather - Darker Nights, 80.esp  EnhancedWeather.esm  EnhancedWeather.esp
supply-chain/: audits.toml  config.toml
