[package]
name = "libloadorder"
version = "18.2.1"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "A cross-platform library for manipulating the load order and active status of plugins for the Elder Scrolls and Fallout games."
documentation = "https://docs.rs/libloadorder"
repository = "https://github.com/Ortham/libloadorder.git"
readme = "README.md"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"
exclude = [
    "target/*",
]

[badges]
coveralls = { repository = "Ortham/libloadorder" }

[dependencies]
dirs = "6.0"
encoding_rs = "0.8"
esplugin = "6.1.1"
regex = "1.11.1"
unicase = "2.8.1"
rayon = "1.0.0"
rust-ini = { version = "0.21.1", features = ["case-insensitive"] }
keyvalues-parser = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Foundation_Collections", "System_UserProfile", "Win32_System_Com", "Win32_UI_Shell"] }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.16.0"

[lib]
name = "loadorder"

[workspace]
members = ["ffi"]

[[bench]]
name = "load_order"
harness = false
