[package]
name = "libloadorder"
version = "18.3.0"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "A cross-platform library for manipulating the load order and active status of plugins for the Elder Scrolls and Fallout games."
repository = "https://github.com/Ortham/libloadorder.git"
categories = ["games", "parsing"]
license = "GPL-3.0"
edition = "2021"
exclude = [
    "target/*",
]

[dependencies]
dirs = "6.0"
encoding_rs = "0.8"
esplugin = "6.1.2"
regex = "1.11.1"
unicase = "2.8.1"
rayon = "1.0.0"
rust-ini = { version = "0.21.1", features = ["case-insensitive"] }
keyvalues-parser = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Foundation_Collections", "System_UserProfile", "Win32_System_Com", "Win32_UI_Shell"] }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.19.1"

[lib]
name = "loadorder"

[workspace]
members = ["ffi"]

[[bench]]
name = "load_order"
harness = false
