[package]
name = "libloadorder-ffi"
version = "14.2.2"
authors = ["Oliver Hamlet <oliver@ortham.io>"]
build = "build.rs"
description = "A wrapper library providing a C FFI for libloadorder."
documentation = "https://docs.rs/libloadorder-ffi"
repository = "https://github.com/Ortham/libloadorder.git"
readme = "../README.md"
categories = ["games"]
license = "GPL-3.0"
edition = "2018"
exclude = [
    "build/*",
    "include/*",
    "target/*",
]

[dependencies]
libloadorder = { version = "14.2.2", path = ".." }
libc = "0.2"

[lib]
name = "loadorder_ffi"
crate-type = ["staticlib"]

[features]
default = []
ffi-headers = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.26", optional = true }
