[package]
name = "libloadorder-ffi"
version = "18.3.0"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "A wrapper library providing a C FFI for libloadorder."
documentation = "https://docs.rs/libloadorder-ffi"
repository = "https://github.com/Ortham/libloadorder.git"
readme = "../README.md"
categories = ["games"]
license = "GPL-3.0"
edition = "2021"
exclude = [
    "build/*",
    "include/*",
    "target/*",
]

[dependencies]
libloadorder = { path = ".." }
libc = "0.2"

[dev-dependencies]
tempfile = "3.19.1"

[lib]
name = "loadorder_ffi"
crate-type = ["staticlib"]
