[package]
name = "libloadorder-ffi"
description = "A wrapper library providing a C FFI for libloadorder."
readme = "../README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
libloadorder = { path = ".." }
libc = "0.2"

[dev-dependencies]
tempfile = "3.22.0"

[lib]
name = "loadorder_ffi"
crate-type = ["staticlib"]

[lints]
workspace = true
